k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
  labels:
    app: kentestgame
spec:
  selector:
    app: kentestgame
  ports:
    - protocol: TCP
      port: 8080 # Exposed service port
      targetPort: 8080 # Target port in the pod
  type: LoadBalancer # Exposing the service via a LoadBalancer (for cloud environments)
